[workspace]
resolver = "2"
members = [
    "rstrace",
    "rstrace-common",
    "rstrace-ebpf",
]
default-members = ["rstrace", "rstrace-common"]

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2021"

[workspace.dependencies]
aya = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-build = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-ebpf = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-log = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya", default-features = false }

anyhow = { version = "1", default-features = false }
cargo_metadata = { version = "0.23.0", default-features = false }
clap = { version = "4.5.20", default-features = false, features = ["std", "derive", "help", "usage"] }
env_logger = { version = "0.11.5", default-features = false }
libc = { version = "0.2.159", default-features = false }
log = { version = "0.4.22", default-features = false }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.150", default-features = false, features = ["std"] }
tokio = { version = "1.40.0", default-features = false }
pnet = { version = "0.35.0", default-features = false, features = ["std"] }
chacha20poly1305 = { version = "0.10.1", default-features = false, features = ["std"] }
hex = { version = "0.4.3", default-features = false, features = ["std"] }
blazesym = { version = "0.2.5", default-features = false, features = ["dwarf", "demangle"] }
which = { version = "6.0.0", default-features = false }

[profile.release.package.rstrace-ebpf]
debug = 2
codegen-units = 1
strip = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
