[package]
name = "rstrace-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
rstrace-common = { path = "../rstrace-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "rstrace"
path = "src/main.rs"
